task-1/deploy/neighbour.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: payments
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      serviceAccountName: reporting

      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
          
      containers:
        - name: client
          image: curlimages/curl:8.8.0
          command: ["sleep", "infinity"]
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
